# website

./: Cargo.toml  Dockerfile  README.md
back/: Cargo.toml
back/src/: main.rs  services.rs
back/src/public/: error.html  index.html
chess/: Cargo.toml
chess/src/: bitboard.rs  board.rs  cmove.rs  engine.rs  lib.rs
front/: vite.config.ts
src/: board.rs  constants.rs  engine.rs  lib.rs  main.rs  pawn_moves.rs  services.rs  shifts.rs
src/board/: bitboard.rs  cmove.rs  piece_moves.rs
src/board/bitboard/: tables.rs
src/chess/: bitboard.rs  board.rs  cmove.rs  engine.rs  mod.rs  tables.rs  utils.rs
src/public/html/: chess.html  cmu-15-418-s24-final-project.html  dijkstra.html  error.html  index.html  optcomp.html
