[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"]}
rust-embed="8.1.0"